Fix alignment of top menu buttons

--- a/styles/default.css
+++ b/styles/default.css
@@ -177,6 +177,8 @@ input, textarea, button {
 }
 #top .menu {
     float: right;
+    height: 32px;
+    line-height: 32px;
 }
 #top .webstore {
     display: inline-block;
@@ -222,7 +224,7 @@ input, textarea, button {
     display: inline-block;
     width: 25px;
     height: 28px;
-    margin: -4px 0px 0px 9px;
+    margin: 1px 0px 0px 9px;
     border: 1px solid #8B9594;
     border-radius: 0 10px 10px 0;
     background: -webkit-linear-gradient(bottom, rgba(0, 124, 137, 0.4) 0%, rgba(0, 124, 137, 0.4) 50%, rgba(0, 124, 137, 0.2) 50%, rgba(0, 124, 137, 0.2) 100%);
